# HairD-2022.09.01-

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  carelabmap.pgm  cmake_install.cmake  map.pgm  map.yaml  package.xml
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_generated/installspace/: qr.pc  qrConfig.cmake
catkin_generated/stamps/qr/: receive.py.stamp
hair_D/: Hello.txt
hair_D/omo_r1/: README.md
hair_D/omo_r1/omo_r1/: package.xml
hair_D/omo_r1/omo_r1_bringup/: CMakeLists.txt  package.xml
hair_D/omo_r1/omo_r1_bringup/launch/: haird.launch  omo_r1_lidar_G2.launch  omo_r1_robot_G2.launch
hair_D/omo_r1/omo_r1_bringup/src/: bbangle.cpp  costmap_clear.cpp  emptying.cpp  emptying_goal.py  example_push.py  goal.py  hair_goal.py  main_hair.cpp  odom.cpp  vel_round.cpp  yolo_mobile.py
hair_D/omo_r1/omo_r1_bringup/src/omo_r1_bringup/: goal.py
hair_D/omo_r1/omo_r1_bringup/srv/: et_check.srv  navigation_check.srv  qt_check.srv  yolo_check.srv
hair_D/omo_r1/omo_r1_description/urdf/: omo_r1.urdf.g2.xacro
hair_D/omo_r1/omo_r1_navigation/launch/: amcl.launch  hair_navigation.launch  move_base.launch  omo_r1_navigation.launch  omo_r1_navigation_G2.launch
hair_D/omo_r1/omo_r1_navigation/maps/: captain2.pgm  captain2.yaml  carelabmap.yaml  hairshop.pgm  hairshop.yaml  hairshop2.pgm  hairshop2.yaml  hairshop3.pgm  hairshop3.yaml  map.pgm  map.yaml  shophong.pgm  shophong.yaml  shophong2.pgm  shophong2.yaml
hair_D/omo_r1/omo_r1_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
hair_D/omo_r1/omo_r1_navigation/rviz/: omo_r1_navigation.rviz
hair_D/omo_r1/omo_r1_teleop/nodes/: omo_r1_teleop_key
hair_D/omo_r1/omo_r1mini_cartographer/: CMakeLists.txt  package.xml
hair_D/omo_r1/omo_r1mini_cartographer/config/: omo_r1mini_lidar.lua
hair_D/omo_r1/omo_r1mini_cartographer/launch/: occupancy_grid.launch  omo_r1mini_cartographer.launch  omo_r1mini_cartographer_g2.launch  omo_r1mini_cartographer_rviz.launch
hair_D/omo_r1/omo_r1mini_cartographer/rviz/: omo_r1mini_cartographer.rviz
hair_D/omo_r1/omo_r1mini_cartographer/scripts/: save_pbstream.sh
iahrs_driver/src/: iahrs_driver.cpp
md/: CMakeLists.txt  package.xml
md/include/md_robot_node/: com.hpp  global.hpp
md/launch/: md_robot_node.launch  md_robot_node_use_MDUI.launch
md/msg/: Pose.msg
md/src/md_robot_node/: com.cpp  main.cpp  robot.cpp
resources/: resources.qrc
robot_localization/params/: ekf_template.yaml  ukf_template.yaml
ros/dynamixel_sdk_examples/: CMakeLists.txt
ros/dynamixel_sdk_examples/launch/: cleaner.launch  fix.launch
ros/dynamixel_sdk_examples/src/: cleaner.cpp  fix.cpp  read_tray.cpp  read_write_node.cpp
ros/dynamixel_sdk_examples/srv/: sig_dy.srv
src/: captain_mainwindow.cpp  captain_mainwindow.h  captain_mainwindow.ui  chair1_dialog.cpp  chair1_dialog.h  chair1_dialog.ui  chair2_dialog.cpp  chair2_dialog.h  chair2_dialog.ui  chair3_dialog.cpp  chair3_dialog.h  chair3_dialog.ui  empty_dialog.cpp  empty_dialog.h  empty_dialog.ui  main.cpp  resources.qrc
src/test/: mobile.py  yolostart.py
src/yolov5/: detect.py  test.cache  train.cache  train.txt
src/yolov5/qr/: README.dataset.txt
src/yolov5/qr/test/labels/: blurredimage027_jpg.rf.e94fcc2b67337004cfb93e259d74a53d.txt  bright_spotsimage007_jpg.rf.435f8e3a6b2ff9da4d37dafc5de4ffbb.txt  bright_spotsimage015_jpg.rf.58e22216461d21d4091f4cf55f195427.txt  bright_spotsimage021_jpg.rf.53d41352607f6d4557437658f55eec1f.txt  bright_spotsimage029_jpg.rf.3c87264fd07b62ca47ebcb0c203186dc.txt  bright_spotsimage031_jpg.rf.9bd22871ddda40deff394c5273a27720.txt  brightnessimage011_jpg.rf.72c77a10c6835eac39e529377964d496.txt  brightnessimage012_jpg.rf.2601119cf34cd7c58084dfa84b7fb027.txt  brightnessimage028_jpg.rf.4ed784c881b42923360f7bc1008fd9fa.txt  closeimage013_jpg.rf.e14cfd1ecdfef1fe534f42d4bd76f644.txt  curvedimage039_jpg.rf.393a8b9036b8c052e9fbcbff113e4cc5.txt  damagedimage034_jpg.rf.a5599c3d4186996436918887f9b3af07.txt  glareimage008_jpg.rf.6cc5deec7baedb48570aea498cdd5a3d.txt  glareimage013_jpg.rf.4f0a1df14664c2645de83dc15ff35970.txt  glareimage015_jpg.rf.832b21d70379d2912d83b637cf82fe2a.txt  glareimage020_jpg.rf.b4736ed90cc6636c3194d19580ce5e0a.txt  high_versionimage019_jpg.rf.03a5a5b37fac1309a8523873b33524bf.txt  high_versionimage026_jpg.rf.a800a3a85a202c4e2deace7fb581bb73.txt  high_versionimage031_jpg.rf.28b453d42a973fa235072e8aff2ec0e8.txt  monitorimage012_jpg.rf.2cc40f0fcc319d30dbf09f4990f99d95.txt  nominalimage005_jpg.rf.2cd875eff965842f29b3c23e0e865a04.txt  nominalimage009_jpg.rf.40fd638bbdc3d612ef8f906227e80b86.txt  nominalimage010_jpg.rf.6aede9ca534b2da1d1c1189ecf12cd41.txt  nominalimage054_jpg.rf.a58021fef35554e60c0d79f1f3146041.txt  rotationsimage003_jpg.rf.0018377b8de01c2c86ab56e28c64f8d7.txt  rotationsimage021_jpg.rf.d31643802d192ebde521a34cc2d0ddba.txt  rotationsimage036_jpg.rf.2243b9f5a11ba60eed1f4d5173f1917b.txt  shadowsimage009_jpg.rf.c3a505017f2516095ec2b3ba13646e34.txt  v2Location_png.rf.0249fe173e43cb6bf9b0f09a299b1610.txt  v2VCard-BasicWikipedia_png.rf.675019c9dda8648dcff48fec156f8ff5.txt  v2YouTube_png.rf.db9920fcc0c9864248e139a07acd01d0.txt
src/yolov5/qr/train/labels/: blurredimage001_jpg.rf.57e87354e135d990c851eabed40fc13c.txt  blurredimage005_jpg.rf.57745796d79420cf7fe00c98ec042b40.txt  blurredimage007_jpg.rf.b38bf95af1bbe580ae35f782172210bb.txt  blurredimage009_jpg.rf.9d4b4908f5541e91c291e6f8d6b44bf7.txt  blurredimage012_jpg.rf.6108461f4dd8a5c5cfa346568c0878cf.txt  blurredimage013_jpg.rf.47bbb4e38b90b68beaafa090cb242753.txt  blurredimage014_jpg.rf.5f523555fcba1b693290587630d6c17a.txt  blurredimage015_jpg.rf.4b361b62763b302d1e461b58d79e5938.txt  (+239 more)
src/yolov5/yolov5m-seg/archive/: data.pkl
srv/: et_check.srv  qt_check.srv
yolov/: CMakeLists.txt  README.md
yolov/src/test/: receive.py
yolov/src/yolov5/: detect.py  test.cache  test.txt  train.cache
yolov/src/yolov5/qr/: README.roboflow.txt  data.yaml
yolov/srv/: yolostart.srv
(+1008 files in other folders)
