<?xml version="1.0"?>
<package format="2">
  <name>omo_r1mini_cartographer</name>
  <version>0.0.1</version>
  <description>
    OMO R1mini robot package - launchers which uses optimized cartographer parameters.
  </description>
  <license>Apache 2.0</license>
  <author email="kyuhyong@omorobot.com">Kyuhyong</author>
  <maintainer email="kyuhyong@omorobot.com">Kyuhyong</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>omo_r1_bringup</exec_depend>
  <exec_depend>cartographer</exec_depend>
</package>
